--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,8 @@ services:
         POSTGRES_DB: psp-dev
       ports:
       - 5432:5432
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin-psp-dev
+    ports:
+      - "9411:9411"
